--- a/components/language-selector/language-selector.css
+++ b/components/language-selector/language-selector.css
@@ -18,10 +18,13 @@
     width: 32px;
     height: 32px;
     border-radius: 50%;
+    object-fit: cover;
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
 }
 
 .language-overlay {
-    display: none;
     position: fixed;
     top: 0;
     right: 0;
@@ -32,6 +35,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow-y: auto;
+    padding: 1rem;
 }
 
 .language-options {
