Added: Component approach

--- a/components/starters/starters.html
+++ b/components/starters/starters.html
@@ -7,10 +7,8 @@
   <title>Starters</h1>
   </title>
   <link rel="stylesheet" href="../../styles/main.css" />
-  <link rel="stylesheet" href="../footer/footer.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css" />
   <link rel="stylesheet" href="../category-slider/category-slider.css" />
-  <link rel="stylesheet" href="starters.css" />
 </head>
 
 <body>
@@ -30,8 +28,7 @@
     <!-- Productos se cargan por JS -->
   </main>
 
-  <div id="footer-container"></div>
-
+  <app-footer></app-footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/min/tiny-slider.js"></script>
 
