--- a/components/starters/starters.html
+++ b/components/starters/starters.html
@@ -13,14 +13,7 @@
 
 <body>
 
-  <header>
-    <div class="header-content">
-      <a href="../../index.html">
-        <img src="../../imgs/restaurant-logo.jpg" alt="Home" />
-      </a>
-      <h1 class="header-title">Starters</h1>
-    </div>
-  </header>
+  <app-header></app-header>
 
   <div id="category-slider-container"></div>
 
@@ -32,6 +25,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/min/tiny-slider.js"></script>
 
+  <script type="module" src="../header/header.js"></script>
   <script type="module" src="../footer/footer.js"></script>
   <script type="module" src="starters.js"></script>
 
