--- a/components/starters/starters.html
+++ b/components/starters/starters.html
@@ -17,9 +17,18 @@
 
   <div id="category-slider-container"></div>
 
+  <!-- En tu HTML principal -->
+  <!-- <category-carousel></category-carousel> -->
+
   <main class="products-grid" id="products-container">
     <!-- Productos se cargan por JS -->
   </main>
+
+  
+  <section id="carnes-rojas">Contenido de Carnes Rojas</section>
+  <section id="carnes-blancas">Contenido de Carnes Blancas</section>
+  <section id="pastas">Contenido de Pastas</section>
+  <!-- etc. -->
 
   <app-footer></app-footer>
 
