--- a/components/language-selector/language-selector.html
+++ b/components/language-selector/language-selector.html
@@ -1,13 +1,19 @@
-<div class="language-selector" id="language-selector">
-    <button id="language-button" class="language-button">
-        <img id="current-flag" src="./components/language-selector/flags/es.svg" alt="Idioma actual" />
-    </button>
-    <div class="language-overlay" id="language-overlay">
-        <ul class="language-options">
-            <li data-lang="es"><img src="./components/language-selector/flags/es.svg" alt="Español" /></li>
-            <li data-lang="en"><img src="./components/language-selector/flags/en.svg" alt="English" /></li>
-            <li data-lang="fr"><img src="./components/language-selector/flags/fr.svg" alt="Français" /></li>
-            <li data-lang="pt"><img src="./components/language-selector/flags/pt.svg" alt="Português" /></li>
+<div class="language-selector">
+    <div class="selected-language">
+        <img id="selected-lang-flag" src="" alt="Selected language">
+        <span id="selected-lang-text">Language</span>
+    </div>
+    <div class="language-dropdown">
+        <ul>
+            <li data-lang="es">
+                <img src="" alt="Español">
+                <span>Español</span>
+            </li>
+            <li data-lang="en">
+                <img src="" alt="English">
+                <span>English</span>
+            </li>
+            <!-- Puedes añadir más idiomas aquí si fuera necesario -->
         </ul>
     </div>
 </div>
