--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -1,3 +1,8 @@
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+</head>
+
 <footer>
     <h3 id="footer-title"></h3>
     <p id="footer-description"></p>
