Removed: Unused styles. changed: Translation service path.

--- a/components/starters/starters.html
+++ b/components/starters/starters.html
@@ -8,6 +8,7 @@
   </title>
   <link rel="stylesheet" href="../../styles/main.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="../category-slider/category-slider.css" />
 </head>
 
@@ -23,12 +24,6 @@
   <main class="products-grid" id="products-container">
     <!-- Productos se cargan por JS -->
   </main>
-
-  
-  <section id="carnes-rojas">Contenido de Carnes Rojas</section>
-  <section id="carnes-blancas">Contenido de Carnes Blancas</section>
-  <section id="pastas">Contenido de Pastas</section>
-  <!-- etc. -->
 
   <app-footer></app-footer>
 
