--- a/components/full-menu/full-menu.html
+++ b/components/full-menu/full-menu.html
@@ -7,6 +7,7 @@
     <title data-i18n="full-menu.title">Menú Completo</title>
     <link rel="stylesheet" href="../../styles/main.css" />
     <link rel="stylesheet" href="full-menu.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css" />
 </head>
 
