Changed: Service Menu

--- a/components/language-selector/language-selector.html
+++ b/components/language-selector/language-selector.html
@@ -13,6 +13,10 @@
                 <img src="" alt="English">
                 <span>English</span>
             </li>
+            <li data-lang="pt">
+                <img src="" alt="Portugues">
+                <span>Portugues</span>
+            </li>
             <!-- Puedes añadir más idiomas aquí si fuera necesario -->
         </ul>
     </div>
