--- a/components/service-menu/full-service/full-service.html
+++ b/components/service-menu/full-service/full-service.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title data-i18n="full-menu.title">Menú Completo</title>
-    <link rel="stylesheet" href="../../styles/main.css" />
-    <link rel="stylesheet" href="full-menu.css" />
+    <link rel="stylesheet" href="../../../styles/main.css" />
+    <link rel="stylesheet" href="full-service.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css" />
 </head>
@@ -25,13 +25,12 @@
 
     <app-footer></app-footer>
 
+    <script type="module" src="../../../assets/i18n/translationService.js"></script>
+
+    <script type="module" src="../../category-slider/category-slider.js"></script>
+
+    <!-- Tiny Slider JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/min/tiny-slider.js"></script>
-    <script type="module" src="../header/header.js"></script>
-    <script type="module" src="../footer/footer.js"></script>
-    <script type="module" src="../category-slider/category-slider.js"></script>
-    <script type="module" src="full-menu.js"></script>
-    <script type="module" src="../language-selector/language-selector.js"></script>
-    <script type="module" src="../../assets/i18n/translationService.js"></script>
 
     <script type="module">
         import TranslationService from '../../assets/i18n/translationService.js';
