Added: Starters Service. Fixed: Translation Service

--- a/components/service-menu/full-service/full-service.html
+++ b/components/service-menu/full-service/full-service.html
@@ -1,18 +1,5 @@
-<h1 data-i18n="full-menu.title">Menú Completo</h1>
+<h1 class="service-title" data-i18n="full-menu.title">Menú Completo</h1>
 
-<div id="category-slider-container">
-  <div class="category-slider">
-    <div class="slider-wrapper">
-      <div class="my-slider">
-        <div class="slide-item active" data-category="all">All</div>
-        <div class="slide-item" data-category="vegan">Vegan</div>
-        <div class="slide-item" data-category="gluten-free">Gluten Free</div>
-        <!-- Agregá más categorías si las necesitas -->
-      </div>
-    </div>
-  </div>
-</div>
+<category-slider></category-slider>
 
-<main id="full-menu-container" class="menu-sections">
-  <!-- Secciones y productos se renderizan dinámicamente -->
-</main>
+<main id="full-menu-container" class="menu-sections"></main>
