--- a/components/category-slider/category-slider.html
+++ b/components/category-slider/category-slider.html
@@ -1,9 +1,9 @@
 <div class="category-slider">
-    <div class="slider-wrapper">
-      <div class="my-slider">
-        <div class="slide-item" data-category="all">All</div>
-        <div class="slide-item" data-category="vegan">Vegan</div>
-        <div class="slide-item" data-category="gluten-free">Gluten Free</div>
-      </div>
+  <div class="slider-wrapper">
+    <div class="my-slider">
+      <div class="slide-item active" data-category="all">All</div>
+      <div class="slide-item" data-category="vegan">Vegan</div>
+      <div class="slide-item" data-category="gluten-free">Gluten Free</div>
     </div>
+  </div>
 </div>
