--- a/components/service-menu/full-service/full-service.html
+++ b/components/service-menu/full-service/full-service.html
@@ -1,4 +1,4 @@
-<h1 class="service-title" data-i18n="full-menu.title">Menú Completo</h1>
+<h1 class="service-title" data-i18n="service-menu.full-service.title">Full Menu</h1>
 
 <category-slider></category-slider>
 
