--- a/components/service-menu/service-menu.html
+++ b/components/service-menu/service-menu.html
@@ -1,18 +1,18 @@
 <div class="all">
     <div class="full-service" style="background-image: url('__FULL_SERVICE__')">
-        <div class="explainer"><span data-i18n="menu.explore_menu">Explore Menu</span></div>
-        <div class="text" data-i18n="menu.full_menu">Full Menu</div>
+        <div class="explainer" data-i18n="service-menu.explore_menu">Explore Menu</div>
+        <div class="text" data-i18n="service-menu.full_service">Full Menu</div>
     </div>
     <div class="desserts" style="background-image: url('__DESSERTS__')">
-        <div class="text" data-i18n="menu.desserts">Desserts</div>
+        <div class="text" data-i18n="service-menu.desserts">Desserts</div>
     </div>
     <div class="drinks" style="background-image: url('__DRINKS__')">
-        <div class="text" data-i18n="menu.drinks">Drinks</div>
+        <div class="text" data-i18n="service-menu.drinks">Drinks</div>
     </div>
     <div class="main-courses" style="background-image: url('__MAIN_COURSES__')">
-        <div class="text" data-i18n="menu.main_courses">Main Courses</div>
+        <div class="text" data-i18n="service-menu.main_courses">Main Courses</div>
     </div>
     <div class="starters" style="background-image: url('__STARTERS__')">
-        <div class="text" data-i18n="menu.starters">Starters</div>
+        <div class="text" data-i18n="service-menu.starters">Starters</div>
     </div>
 </div>
