--- a/components/header/navbar.html
+++ b/components/header/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar">
     <div class="navbar-left">
-        <button id="home-btn" class="home-btn" onclick="location.href='../../index.html'" data-i18n="navbar.home-btn"> Inicio </button>
+        <button id="home-btn" class="home-btn" onclick="location.href='../../index.html'" data-i18n="header.navbar.home-btn"> Inicio </button>
     </div>
 </nav>
