--- a/components/service-menu/starters-service/starters-service.html
+++ b/components/service-menu/starters-service/starters-service.html
@@ -1,3 +1,3 @@
-<h1 class="service-title" data-i18n="starters.title">Entradas</h1>
+<h1 class="service-title" data-i18n="service-menu.starters">Starters</h1>
 <category-slider></category-slider>
 <main id="starters-container" class="menu-sections"></main>
