Fixed: Footer Center

--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -4,8 +4,10 @@
 </head>
 
 <footer>
-    <h3 id="footer-title"></h3>
-    <p id="footer-description"></p>
-    <div id="social-links-container" class="social-links"></div>
-    <p id="copyright"></p>
+    <div class="footer-content">
+        <h3 id="footer-title"></h3>
+        <p id="footer-description"></p>
+        <div id="social-links-container" class="social-links"></div>
+        <p id="copyright"></p>
+    </div>
 </footer>
