--- a/components/footer/footer.css
+++ b/components/footer/footer.css
@@ -2,9 +2,15 @@ footer {
     width: 100%;
     background-color: #333;
     color: white;
+    margin-top: 3rem;
+}
+
+.footer-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
     padding: 2rem;
-    margin-top: 3rem;
 }
 
 .social-links {
