Manage home buttons

--- a/components/header/navbar/navbar.css
+++ b/components/header/navbar/navbar.css
@@ -8,6 +8,11 @@
     font-family: sans-serif;
 }
 
+.navbar-left {
+    min-width: 6rem;
+}
+
+
 .home-btn {
     background: none;
     border: none;
