--- a/components/header/navbar/navbar.html
+++ b/components/header/navbar/navbar.html
@@ -1,5 +1,6 @@
 <nav class="navbar">
     <div class="navbar-left">
+        <!-- Desktop Version -->
         <button id="home-btn" class="home-btn desktop-only" data-i18n="header.navbar.home-btn">Home</button>
         <!-- Mobile Version -->
         <back-button></back-button>
