Headers and selector

--- a/components/header/navbar-logo/navbar-logo.html
+++ b/components/header/navbar-logo/navbar-logo.html
@@ -2,14 +2,12 @@
   <div class="navbar-section left">
     <button id="home-btn" class="home-btn" data-i18n="header.navbar.home-btn">Home</button>
   </div>
-
   <div class="navbar-section center">
     <div class="logo-wrapper">
       <img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Logo_TV_2015.png" alt="Logo" class="logo-img" />
     </div>
   </div>
-
   <div class="navbar-section right">
-    <!-- Podés agregar íconos, idioma, etc., si lo necesitás -->
+    <!--<language-selector></language-selector>-->
   </div>
 </nav>
