--- a/components/header/header.html
+++ b/components/header/header.html
@@ -1,6 +1,7 @@
 <header>
-    <div class="header-content">
-        <h1 id="header-title"></h1>
-        <p id="header-subtitle" class="subtitle"></p>
-    </div>
+  <div class="header-content">
+    <button id="home-btn" class="home-btn" data-i18n="header.cover.home-btn">Home</button>
+    <h1 id="header-title">My App</h1>
+    <p id="header-subtitle" class="subtitle"></p>
+  </div>
 </header>
