--- a/components/header/navbar/navbar.html
+++ b/components/header/navbar/navbar.html
@@ -1,6 +1,11 @@
 <nav class="navbar">
     <div class="navbar-left">
-        <!-- Desktop Version -->
         <button id="home-btn" class="home-btn desktop-only" data-i18n="header.navbar.home-btn">Home</button>
+    </div>
+    <div class="navbar-center">
+        <span class="navbar-title">My App</span>
+    </div>
+    <div class="navbar-right">
+        <!--<language-selector></language-selector>-->
     </div>
 </nav>
