Initial part of Product Carousel

--- a/components/service-menu/desserts-service/desserts-service.html
+++ b/components/service-menu/desserts-service/desserts-service.html
@@ -1,3 +1,4 @@
 <h1 class="service-title" data-i18n="service-menu.desserts">Desserts</h1>
 <category-slider></category-slider>
+<product-carousel></product-carousel>
 <main id="desserts-container" class="menu-sections"></main>
