Added: Part of product carousel and feature-service

--- a/components/service-menu/drinks-service/drinks-service.html
+++ b/components/service-menu/drinks-service/drinks-service.html
@@ -1,3 +1,4 @@
 <h1 class="service-title" data-i18n="service-menu.drinks">Drinks</h1>
 <category-slider></category-slider>
+<product-carousel></product-carousel>
 <main id="drinks-container" class="menu-sections"></main>
