--- a/components/service-menu/full-service/full-service.html
+++ b/components/service-menu/full-service/full-service.html
@@ -1,3 +1,4 @@
 <h1 class="service-title" data-i18n="service-menu.full-service.title">Full Menu</h1>
 <category-slider></category-slider>
+<product-carousel></product-carousel>
 <main id="full-menu-container" class="menu-sections"></main>
