--- a/components/service-menu/main-service/main-service.html
+++ b/components/service-menu/main-service/main-service.html
@@ -1,3 +1,4 @@
 <h1 class="service-title" data-i18n="service-menu.main_courses">Main Courses</h1>
 <category-slider></category-slider>
+<product-carousel></product-carousel>
 <main id="main-courses-container" class="menu-sections"></main>
